feat(handler): :zap: extract some api to self package
