# docs/swagger.json
@@ -21,7 +21,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "balance"
+                    "Balance"
                 ],
                 "summary": "GetAllBalance",
                 "responses": {
@@ -50,7 +50,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "balance"
+                    "Balance"
                 ],
                 "summary": "ImportBalance",
                 "parameters": [
@@ -87,7 +87,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "balance"
+                    "Balance"
                 ],
                 "summary": "DeletaAllBalance",
                 "responses": {
@@ -112,7 +112,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "condition"
+                    "TradeCondition"
                 ],
                 "summary": "GetLatestTradeCondition",
                 "responses": {
@@ -135,7 +135,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "condition"
+                    "TradeCondition"
                 ],
                 "summary": "ImpoprtTradeCondition",
                 "parameters": [
@@ -166,7 +166,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "condition"
+                    "TradeCondition"
                 ],
                 "summary": "DeletaAllResultAndCond",
                 "responses": {
@@ -191,7 +191,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "condition"
+                    "TradeCondition"
                 ],
                 "summary": "GetLatestTradeCondition",
                 "responses": {
@@ -216,7 +216,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "tradebot"
+                    "Data"
                 ],
                 "summary": "ReceiveBidAsk",
                 "parameters": [
@@ -252,7 +252,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "tradebot"
+                    "Data"
                 ],
                 "summary": "ReceiveStreamTick",
                 "parameters": [
@@ -288,7 +288,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "tradebot"
+                    "ManualTrade"
                 ],
                 "summary": "ManualBuyLaterStock",
                 "parameters": [
@@ -298,7 +298,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/tradebothandler.ManualBuyLaterBody"
+                            "$ref": "#/definitions/manualtradehandler.ManualBuyLaterBody"
                         }
                     }
                 ],
@@ -324,7 +324,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "tradebot"
+                    "ManualTrade"
                 ],
                 "summary": "ManualSellStock",
                 "parameters": [
@@ -334,63 +334,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/tradebothandler.ManualSellBody"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": ""
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/switch": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "tradebot"
-                ],
-                "summary": "GetTradeBotSwitch",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/global.SystemSwitch"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "tradebot"
-                ],
-                "summary": "UpdateTradeBotSwitch",
-                "parameters": [
-                    {
-                        "description": "Body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/global.SystemSwitch"
+                            "$ref": "#/definitions/manualtradehandler.ManualSellBody"
                         }
                     }
                 ],
@@ -416,7 +360,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "mainsystem"
+                    "MainSystem"
                 ],
                 "summary": "Restart",
                 "responses": {
@@ -441,7 +385,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "mainsystem"
+                    "MainSystem"
                 ],
                 "summary": "UpdateSysparm",
                 "parameters": [
@@ -480,7 +424,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "tradebot"
+                    "Target"
                 ],
                 "summary": "GetTarget",
                 "parameters": [
@@ -498,7 +442,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/tradebothandler.TargetResponse"
+                                "$ref": "#/definitions/targethandler.TargetResponse"
                             }
                         }
                     },
@@ -520,7 +464,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "tradeevent"
+                    "TradeEvent"
                 ],
                 "summary": "ReciveTradeEvent",
                 "parameters": [
@@ -556,7 +500,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "traderecord"
+                    "TradeRecord"
                 ],
                 "summary": "UpdateTradeRecord",
                 "parameters": [
@@ -567,6 +511,62 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/traderecord.TradeRecordArrProto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/trade/switch": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "MainSystem"
+                ],
+                "summary": "GetTradeBotSwitch",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/global.SystemSwitch"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "MainSystem"
+                ],
+                "summary": "UpdateTradeBotSwitch",
+                "parameters": [
+                    {
+                        "description": "Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/global.SystemSwitch"
                         }
                     }
                 ],
@@ -706,6 +706,28 @@
             "properties": {
                 "attachment": {},
                 "response": {
+                    "type": "string"
+                }
+            }
+        },
+        "manualtradehandler.ManualBuyLaterBody": {
+            "type": "object",
+            "properties": {
+                "price": {
+                    "type": "number"
+                },
+                "stock_num": {
+                    "type": "string"
+                }
+            }
+        },
+        "manualtradehandler.ManualSellBody": {
+            "type": "object",
+            "properties": {
+                "price": {
+                    "type": "number"
+                },
+                "stock_num": {
                     "type": "string"
                 }
             }
@@ -885,29 +907,7 @@
                 }
             }
         },
-        "tradebothandler.ManualBuyLaterBody": {
-            "type": "object",
-            "properties": {
-                "price": {
-                    "type": "number"
-                },
-                "stock_num": {
-                    "type": "string"
-                }
-            }
-        },
-        "tradebothandler.ManualSellBody": {
-            "type": "object",
-            "properties": {
-                "price": {
-                    "type": "number"
-                },
-                "stock_num": {
-                    "type": "string"
-                }
-            }
-        },
-        "tradebothandler.TargetResponse": {
+        "targethandler.TargetResponse": {
             "type": "object",
             "properties": {
                 "close": {
