# pkg/handlers/mainsystemhandler/handler.go
@@ -10,6 +10,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"gitlab.tocraw.com/root/toc_trader/internal/healthcheck"
 	"gitlab.tocraw.com/root/toc_trader/internal/logger"
+	"gitlab.tocraw.com/root/toc_trader/pkg/global"
 	"gitlab.tocraw.com/root/toc_trader/pkg/handlers"
 	"gitlab.tocraw.com/root/toc_trader/pkg/models/sysparm"
 	"gitlab.tocraw.com/root/toc_trader/pkg/modules/parameters"
@@ -19,11 +20,14 @@ import (
 func AddHandlers(group *gin.RouterGroup) {
 	group.GET("/system/restart", Restart)
 	group.POST("/system/sysparm", UpdateSysparm)
+
+	group.GET("/trade/switch", GetTradeBotSwitch)
+	group.PUT("/trade/switch", UpdateTradeBotSwitch)
 }
 
 // Restart Restart
 // @Summary Restart
-// @tags mainsystem
+// @tags MainSystem
 // @accept json
 // @produce json
 // @success 200
@@ -43,7 +47,7 @@ func Restart(c *gin.Context) {
 
 // UpdateSysparm UpdateSysparm
 // @Summary UpdateSysparm
-// @tags mainsystem
+// @tags MainSystem
 // @accept json
 // @produce json
 // @param body body []sysparm.Parameters true "Body"
@@ -72,5 +76,50 @@ func UpdateSysparm(c *gin.Context) {
 			return
 		}
 	}
+	c.JSON(http.StatusOK, nil)
+}
+
+// GetTradeBotSwitch GetTradeBotSwitch
+// @Summary GetTradeBotSwitch
+// @tags MainSystem
+// @accept json
+// @produce json
+// @success 200 {object} global.SystemSwitch
+// @Router /trade/switch [get]
+func GetTradeBotSwitch(c *gin.Context) {
+	c.JSON(http.StatusOK, global.TradeSwitch)
+}
+
+// UpdateTradeBotSwitch UpdateTradeBotSwitch
+// @Summary UpdateTradeBotSwitch
+// @tags MainSystem
+// @accept json
+// @produce json
+// @param body body global.SystemSwitch true "Body"
+// @success 200
+// @failure 500 {object} handlers.ErrorResponse
+// @Router /trade/switch [put]
+func UpdateTradeBotSwitch(c *gin.Context) {
+	req := global.SystemSwitch{}
+	var res handlers.ErrorResponse
+	if byteArr, err := ioutil.ReadAll(c.Request.Body); err != nil {
+		logger.GetLogger().Error(err)
+		res.Response = err.Error()
+		c.JSON(http.StatusInternalServerError, res)
+		return
+	} else if err := json.Unmarshal(byteArr, &req); err != nil {
+		logger.GetLogger().Error(err)
+		res.Response = err.Error()
+		c.JSON(http.StatusInternalServerError, res)
+		return
+	}
+	global.TradeSwitch = req
+	logger.GetLogger().WithFields(map[string]interface{}{
+		"EnableBuy":             global.TradeSwitch.Buy,
+		"EnableSell":            global.TradeSwitch.Sell,
+		"EnableSellFirst":       global.TradeSwitch.SellFirst,
+		"EnableBuyLater":        global.TradeSwitch.BuyLater,
+		"MeanTimeTradeStockNum": global.TradeSwitch.MeanTimeTradeStockNum,
+	}).Info("Trade Switch Status")
 	c.JSON(http.StatusOK, nil)
 }
