# pkg/handlers/manualtradehandler/model.go
@@ -1,5 +1,5 @@
-// Package tradebothandler tradebothandler
-package tradebothandler
+// Package manualtradehandler package manualtradehandler
+package manualtradehandler
 
 // ManualSellBody ManualSellBody
 type ManualSellBody struct {
@@ -11,10 +11,4 @@ type ManualSellBody struct {
 type ManualBuyLaterBody struct {
 	StockNum string  `json:"stock_num"`
 	Price    float64 `json:"price"`
-}
-
-// TargetResponse TargetResponse
-type TargetResponse struct {
-	StockNum string  `json:"stock_num"`
-	Close    float64 `json:"close"`
 }
