# pkg/handlers/targethandler/model.go
@@ -1,0 +1,8 @@
+// Package targethandler package targethandler
+package targethandler
+
+// TargetResponse TargetResponse
+type TargetResponse struct {
+	StockNum string  `json:"stock_num"`
+	Close    float64 `json:"close"`
+}
